# rury

./: .gitignore  CHANGELOG.md  README.md  elm.json  flake.nix  rury.cabal
app/: Main.hs
frontend/: Main.elm  Search.elm
nix/pkgs/: awailable-packages.nix  r-builder.nix  server.nix
server/: Main.hs
