cabal-version:      3.0
name:               rury
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Marek Fajkus
maintainer:         marek.faj@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable rury
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
                    , scotty
                    , aeson
                    , text
                    , bytestring
                    , process
                    , wai
                    , http-types
                    , cryptohash-sha256
                    , base16-bytestring
                    , utf8-string
    hs-source-dirs:   app
    default-language: Haskell2010
